
1.7.0
Ancient Tools maple/spruce compatibility added
Ancient Tools salted meat can be hung on meathooks, baked, put in pies, used in porridge/pasta/salad has part-baked & charred variants - DONE!!!
Ancient Tools meat can be smashed with the Acorns mallet - DONE!!!
Cooked food can be chopped up - DONE!!!
Partially cooked & cooked vanilla meat can be charred in the firepit - DONE!!!
Primitive Survival salmon & vanilla fish usable for fish sauce
Primitive Survival cooked crabnugget nutrition buffed - DONE!!!
Pitch glue recipe fixed	
Cheese buffed to have NutritionPropsWhenInMeal
Soy milk can be used to make cheese
Soy milk can be added to same meals as normal milk
GroundStack property used internally instead of GrindedStack 
Gelatin stack increased from 16 to 32 - DONE!!!

1.6.8

Added fruit bars - nuts + fruit + syrup
Actually added Wildcraft Trees section in handbook
Various log warnings fixed
Wildcraft fine wine can be distilled into wildcraft brandy
Wildcraft/Wildcraft Trees brandies renamed properly
Gozinaki/trail mix recipes only need 2 handfuls of acorns, not 3
Soulstorm brew has correct text in bottles
Ukranian translation updated (thanks to _epic_fish_ and .olexn)
Polish translation updated (thanks to Sako47)
Many foods can be placed on display case / shelves
Salt production refined (thanks to Goose's Salternate mod)

1.6.7

Updated to NET 7.0
Wildcraft Trees compatibility finally added
Wildcraft compatibility updated
Salt works in meals again
Non-chopped meat works in porridge
New gelatin textures
Chopped food can be used for broth
Aged meat can be used for broth
PS broth recipes require 1 item instead of 2
Lard harden time reduced to 1/4th previous values; corrected harden transition numbers
Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^)
Wildcraft nutrition in pemmican corrected
Fish nugget soup text fixed
Japanese translation updated (thanks to macoto_hino)