@@ -45,14 +45,15 @@ Ancient Tools salted meat can be hung on meathooks, baked, put in pies, used in 
 Ancient Tools meat can be smashed with the Acorns mallet - DONE!!!
 Cooked food can be chopped up - DONE!!!
 Partially cooked & cooked vanilla meat can be charred in the firepit - DONE!!!
-Primitive Survival salmon & vanilla fish usable for fish sauce
+Primitive Survival salmon & vanilla fish usable for fish sauce - DONE!!!
 Primitive Survival cooked crabnugget nutrition buffed - DONE!!!
 Pitch glue recipe fixed	
-Cheese buffed to have NutritionPropsWhenInMeal
 Soy milk can be used to make cheese
 Soy milk can be added to same meals as normal milk
 GroundStack property used internally instead of GrindedStack 
 Gelatin stack increased from 16 to 32 - DONE!!!
+Egg yolk can be used to make pasta
+Vanilla fish can be used in EF stuff
 
 1.6.8
 
